--- a/plastron-messaging/pyproject.toml
+++ b/plastron-messaging/pyproject.toml
@@ -13,14 +13,14 @@ authors = [
 readme = "README.md"
 requires-python = ">= 3.8"
 dependencies = [
-    "stomp.py",
+    "stomp.py~=8.1",
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
 test = [
-    "pytest",
-    "pytest-cov",
+    "pytest~=8.3",
+    "pytest-cov~=5.0",
 ]
 
 [build-system]
