--- a/plastron-rdf/pyproject.toml
+++ b/plastron-rdf/pyproject.toml
@@ -13,15 +13,15 @@ authors = [
 readme = "README.md"
 requires-python = ">= 3.8"
 dependencies = [
-    "rdflib",
+    "rdflib~=6.3",
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
 test = [
-    "freezegun",
-    "pytest",
-    "pytest-cov",
+    "freezegun~=1.5",
+    "pytest~=8.3",
+    "pytest-cov~=5.0",
 ]
 
 [build-system]
