--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "plastron"
-dynamic = ["version", "dependencies", "optional-dependencies"]
+dynamic = ["version"]
 authors = [
     { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
     { name='Josh Westgard', email='westgard@umd.edu' },
@@ -12,6 +12,19 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
+dependencies = [
+    "plastron-client",
+    "plastron-messaging",
+    "plastron-models",
+    "plastron-rdf",
+    "plastron-repo",
+    "plastron-utils",
+]
+
+[project.optional-dependencies]
+cli = [ "plastron-cli" ]
+stomp = [ "plastron-stomp" ]
+web = [ "plastron-web" ]
 
 [build-system]
 requires = ["setuptools>=66.1.0"]
@@ -23,9 +36,17 @@ packages = []
 
 [tool.setuptools.dynamic]
 version = { "file" = "VERSION" }
-dependencies = { "file" = "dependencies.txt" }
 
-[tool.setuptools.dynamic.optional-dependencies]
-cli = { "file" = "dependencies-cli.txt" }
-stomp = { "file" = "dependencies-stomp.txt" }
-web = { "file" = "dependencies-web.txt" }
+[tool.uv.sources]
+plastron-cli = { workspace = true }
+plastron-client = { workspace = true }
+plastron-messaging = { workspace = true }
+plastron-models = { workspace = true }
+plastron-rdf = { workspace = true }
+plastron-repo = { workspace = true }
+plastron-stomp = { workspace = true }
+plastron-utils = { workspace = true }
+plastron-web = { workspace = true }
+
+[tool.uv.workspace]
+members = ["plastron-*"]
