--- a/plastron-cli/pyproject.toml
+++ b/plastron-cli/pyproject.toml
@@ -26,8 +26,8 @@ dependencies = [
 ]
 dynamic = ["version"]
 
-[project.optional-dependencies]
-test = [
+[tool.uv]
+dev-dependencies = [
     "pytest~=8.3",
     "pytest-cov~=5.0",
 ]
