--- a/plastron-client/pyproject.toml
+++ b/plastron-client/pyproject.toml
@@ -20,8 +20,8 @@ dependencies = [
 ]
 dynamic = ["version"]
 
-[project.optional-dependencies]
-test = [
+[tool.uv]
+dev-dependencies = [
     "freezegun~=1.5",
     "http-server-mock~=1.7",
     "pytest~=8.3",
