--- a/plastron-models/pyproject.toml
+++ b/plastron-models/pyproject.toml
@@ -28,8 +28,8 @@ dependencies = [
 ]
 dynamic = ["version"]
 
-[project.optional-dependencies]
-test = [
+[tool.uv]
+dev-dependencies = [
     "freezegun~=1.5",
     "httpretty~=1.1",
     "pytest~=8.3",
