--- a/plastron-rdf/pyproject.toml
+++ b/plastron-rdf/pyproject.toml
@@ -17,8 +17,8 @@ dependencies = [
 ]
 dynamic = ["version"]
 
-[project.optional-dependencies]
-test = [
+[tool.uv]
+dev-dependencies = [
     "freezegun~=1.5",
     "pytest~=8.3",
     "pytest-cov~=5.0",
