--- a/plastron-stomp/pyproject.toml
+++ b/plastron-stomp/pyproject.toml
@@ -25,8 +25,8 @@ dependencies = [
 ]
 dynamic = ["version"]
 
-[project.optional-dependencies]
-test = [
+[tool.uv]
+dev-dependencies = [
     'CoilMQ~=1.0',
     "pytest~=8.3",
     "pytest-cov~=5.0",
