LIBFCREPO-1758. Fixed failing tests.
Stripped down the test config file so that default values will get used instead.

https://umd-dit.atlassian.net/browse/LIBFCREPO-1758

--- a/plastron-web/tests/data/plastron-config.yml
+++ b/plastron-web/tests/data/plastron-config.yml
@@ -1,12 +1,3 @@
 REPOSITORY:
-  REST_ENDPOINT:
-  REPO_EXTERNAL_URL:
-  RELPATH:
-  JWT_SECRET:
+  REST_ENDPOINT: http://localhost:8080/fcrepo/rest
   LOG_DIR:
-PUBLICATION_WORKFLOW:
-  HANDLE_ENDPOINT:
-  HANDLE_JWT_TOKEN:
-  HANDLE_PREFIX:
-  HANDLE_REPO:
-  PUBLIC_URL_PATTERN:
